generic-device-plugin.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: device-plugin
  labels:
    app.kubernetes.io/name: device-plugin
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: device-plugin
  template:
    metadata:
      labels:
        app.kubernetes.io/name: device-plugin
    spec:
      priorityClassName: system-node-critical
      containers:
      - image: squat/generic-device-plugin
        args:
        - --log-level
        - info
        - --domain
        - firecracker
        - --device
        - |
          name: kvm
          groups:
            - paths:
                - path: /dev/kvm
        - --device
        - |
          name: tun
          groups:
            - paths:
                - path: /dev/net/tun
        name: generic-device-plugin
        resources:
          requests:
            cpu: 50m
            memory: 10Mi
          limits:
            cpu: 50m
            memory: 512Mi
        ports:
        - containerPort: 8080
          name: http
        securityContext:
          privileged: true
        volumeMounts:
        - name: device-plugin
          mountPath: /var/lib/kubelet/device-plugins
        - name: dev
          mountPath: /dev
      volumes:
      - name: device-plugin
        hostPath:
          path: /var/lib/kubelet/device-plugins
      - name: dev
        hostPath:
          path: /dev
