pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: firecracker-wrapper
spec:
  containers:
    - name: firecracker-wrapper
      command: [ "/bin/bash", "-c", "trap : TERM INT; sleep infinity & wait" ]
      image: ubuntu
      volumeMounts:
        - name: scripts
          mountPath: /scripts
      resources:
        limits:
          firecracker/tun: 1
          firecracker/kvm: 1
      securityContext:
        capabilities:
          add:
            - "NET_ADMIN"
  volumes:
    - name: scripts
      configMap:
        name: scripts
        items:
          - key: create_vm.sh
            path: create_vm.sh
          - key: download_firecracker.sh
            path: download_firecracker.sh
          - key: download_other.sh
            path: download_other.sh
          - key: install_packages.sh
            path: install_packages.sh
          - key: start_firecracker.sh
            path: start_firecracker.sh
          - key: ssh_vm.sh
            path: ssh_vm.sh
